<resources>
    <string name="app_name">News feeds app</string>
    <string name="welcome">Welcome</string>
    <string name="explore">Explore</string>
    <string name="live_chat">Live chat</string>
    <string name="gallery">Gallery</string>
    <string name="wishlist">Wishlist</string>
    <string name="magazine">E-magazine</string>
    <string name="link_development">LINK DEVELOPMENT</string>
    <string name="open_website">Open website</string>
    <string name="no_internet_connection">No internet connection</string>
</resources>